Add comics/publishers/artists stats to templatetag and show them in index

--- a/comicteca/templates/comics/index.html
+++ b/comicteca/templates/comics/index.html
@@ -15,6 +15,9 @@
   <hr>
   <p>Stats:</p>
   <p><a href="{% url 'colection_list' %}">{% total_colections %} colections</a></p>
+  <p><a href="{% url 'comic_list' %}">{% total_comics %} comics</a></p>
+  <p><a href="{% url 'publisher_list' %}">{% total_publishers %} publishers</a></p>
+  <p><a href="{% url 'artist_list' %}">{% total_artists %} artists</a></p>
 
 {% endblock %}
 
