--- a/comicteca/templates/comics/about.html
+++ b/comicteca/templates/comics/about.html
@@ -18,6 +18,7 @@ Search About
     <li>A3Sec Dev Team</li>
     <li> Tango with Rango Team</li>
     <li>Antonio Melé (Django By Example)</li>
+    <li><a href="http://flagpedia.net/"><img alt="Flags of countries" src="http://flagpedia.net/ico.gif"width="88" height="31"/></a></li>
   </ul>
 </p>
 {% endblock %}
