--- a/comicteca/templates/comics/artist.html
+++ b/comicteca/templates/comics/artist.html
@@ -22,7 +22,7 @@
       {% load thumbnail %}
       {% thumbnail artist.image "200" as thumb_image %}
         <a href="{{ MEDIA_URL }}{{ thumb_image }}">
-          <img src="{{ MEDIA_URL }}{{ thumb_image }}" class="image-detail">
+          <img src="{{ MEDIA_URL }}{{ thumb_image }}" class="image-detail" style="padding:1px;border:thin solid black;">
         </a>
       {% endthumbnail %}
     {% endif %}
@@ -54,11 +54,11 @@
             {% endfor %}
           </ul>
       </li>
-	</ul>
-        {% else %}
-            <h1>Artist Unknown</h1>
-            This artist does not exist!
-        {% endif %}
+	  </ul>
+      {% else %}
+        <h1>Artist Unknown</h1>
+        This artist does not exist!
+      {% endif %}
 
     <hr>
     {% if artist %}
