Modify "delete colection template" extending from base template

--- a/comicteca/templates/comics/delete_colection_confirm.html
+++ b/comicteca/templates/comics/delete_colection_confirm.html
@@ -1,5 +1,17 @@
+{% extends 'comics/base.html' %}
+
+{% load staticfiles %}
+
+{% block title %}Comicteca Comic List{% endblock %}
+
+{% block side_block %}
+  <p>Search Comic List</p>
+{% endblock %}
+
+{% block body_block %}
 <form action="" method="post">{% csrf_token %}
     <p>Are you sure you want to delete "{{ object }}"?</p>
     <input type="submit" value="Confirm" />
 </form>
 
+{% endblock %}
