--- a/comicteca/templates/comics/comic.html
+++ b/comicteca/templates/comics/comic.html
@@ -43,12 +43,12 @@
     {% endif %}
 
     {% if comic.comments  %}
-      <li><u>Comments:</u><strong>{{ comic.comments|markdown }} </strong></li>
+      <li><u>Comments:</u>{{ comic.comments|markdown }}</li>
     {% else  %}
       <li><u>Comments:</u><strong>N/A</strong></li>
     {% endif %}
     <br/>
-    Colaborators:
+    <li><u>Colaborators:</u></li>
     <ul>
       {% for artist,roles in comic.get_all_artists_roles %}
         <li><a href="{{ artist.get_absolute_url }}">{{ artist }}</a>
