Modify "add comic template" extending from base template

--- a/comicteca/templates/comics/add_comic.html
+++ b/comicteca/templates/comics/add_comic.html
@@ -1,46 +1,47 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Comicteca</title>
-    </head>
+{% extends 'comics/base.html' %}
 
-    <body>
-        <h1>Add new Comic to colection "{{ colection.name }}" </h1>
+{% load staticfiles %}
 
-        <form action="." method="post">
-            {% csrf_token %}
-            {% for hidden in form.hidden_fields %}
-                {{ hidden }}
-            {% endfor %}
+{% block title %}Comicteca Comic List{% endblock %}
 
-            {% for field in form.visible_fields %}
-                {{ field.errors }}
+{% block side_block %}
+  <p>Search Comic List</p>
+  <p><center>
+    <a href="{{ colection.get_absolute_url }}">{{ colection.name }} v{{ colection.volume }}</a>
+  </center></p>
+{% endblock %}
 
-                {% if form.help_text %}
-                    {{ field.help_text }}
-                {% else %}
-                    {{ field.name }}
-                {% endif %}
+{% block body_block %}
+<h1>Add new Comic to colection "{{ colection.name }}" </h1>
+  <form action="." method="post">
+      {% csrf_token %}
+      {% for hidden in form.hidden_fields %}
+          {{ hidden }}
+      {% endfor %}
+      {% for field in form.visible_fields %}
+          {{ field.errors }}
+          {% if form.help_text %}
+              {{ field.help_text }}
+          {% else %}
+              {{ field.name }}
+          {% endif %}
+          <p>{{ field }}</p>
+      {% endfor %}
+      <input type="submit" name="submit" value="Add Comic" />
+  </form>
 
-                {{ field }}
-		</br>
-            {% endfor %}
+  {% if form.errors %}
+    {% for field in form %}
+      {% for error in field.errors %}
+        <p> {{ errors }} </p>
+      {% endfor %}
+    {% endfor %}
 
-            <input type="submit" name="submit" value="Add Comic" />
-        </form>
-        {% if form.errors %}
-            {% for field in form %}
-                {% for error in field.errors %}
-                    <p> {{ errors }} </p>
-                {% endfor %}
-            {% endfor %}
+    {% for error in form.non_field_errors %}
+      <p></p>
+      <p> {{ error }} </p>
+      <p></p>
+    {% endfor %}
+  {% endif %}
 
-            {% for error in form.non_field_errors %}
-                <p></p>
-                <p> {{ error }} </p>
-                <p></p>
-            {% endfor %}
-        {% endif %}
-    </body>
-
-</html>
+{% endblock %}
